# lerobot_mcp

./: Cargo.toml
src/: cli.rs  error.rs  main.rs  server.rs
src/hub/: client.rs  types.rs
src/tools/: search.rs
