[package]
name = "lerobot_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.4.18", features = ["derive", "env"] }
thiserror = "2.0.18"
reqwest = { version = "=0.11.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
