[package]
name = "lerobot_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]

# CLI
clap = { version = "=4.4.18", features = ["derive", "env"] }

# Error handling
thiserror = "2.0.18"

# HTTP client
reqwest = { version = "=0.11.24", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# MCP SDK
rmcp = { version = "1.3.0", features = ["macros", "server", "transport-io"] }

# Top-level error handling (main.rs only, not library code)
anyhow = "1.0.102"

# Logging
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing = "0.1.44"
moka = { version = "0.12.15", features = ["future"] }
